// Docs: https://dbml.dbdiagram.io/docs

enum UserRole {
  ADMIN
  USER
}

enum TicketState {
  NEW
  OPEN
  CLOSED
}

Table tickets {
  id uuid [primary key]
  title varchar [not null]
  originalTitle varchar [not null]
  text varchar [not null]
  note varchar [note: "Used by admin note field"]
  state TicketState [not null, note: "le ampelsystem"]
  created_at timestamp [not null]
  last_modified timestamp [not null]
}

Table labels_to_ticket {
  ticket varchar [ref: > tickets.id, not null]
  label varchar [ref: > labels.name, not null]
}

Table labels {
  id uuid [primary key]
  name varchar [not null, unique]
  color varchar
}

Table users {
  id uuid [primary key]
  mail varchar [not null, unique]
  firstname varchar [not null]
  lastname varchar [not null]
  password varchar [not null]
  role UserRole [not null]
  created_at timestamp [not null]
  last_modified timestamp [not null]
  last_login timestamp
}

Table Session {
  id uuid [primary key]
  user_id uuid [not null]
  expires_at timestamp [not null]
}

Table settings {
  key varchar [primary key]
  value varchar [not null]
}

Table question_answer_pair {
  id uuid [primary key]
  question varchar [not null, unique]
  answer varchar [not null]
  order int [not null, unique]
}
